RESOLVED FIXED150850
Fix some inefficiencies in the baseline usage of JITAddGenerator.
https://bugs.webkit.org/show_bug.cgi?id=150850
Summary Fix some inefficiencies in the baseline usage of JITAddGenerator.
Mark Lam
Reported 2015-11-03 13:10:00 PST
1. emit_op_add() was loading the operands twice. Removed the redundant load. 2. The snippet may decide that it wants to go the slow path route all the time. In that case, emit_op_add will end up emitting a branch to an out of line slow path followed by some dead code to store the result of the fast path on to the stack. We now check if the snippet determined that there's no fast path, and just emit the slow path inline, and skip the dead store of the fast path result.
Attachments
the patch. (2.50 KB, patch)
2015-11-03 13:13 PST, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2015-11-03 13:13:01 PST
Created attachment 264716 [details] the patch.
Michael Saboff
Comment 2 2015-11-03 14:08:50 PST
Comment on attachment 264716 [details] the patch. r=me
Mark Lam
Comment 3 2015-11-03 14:15:23 PST
Note You need to log in before you can comment on or make changes to this bug.